--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
   <!-- Navigation Bar -->
 <nav class="navbar">
+    <div class="logo-container">
+      <img src="images/projector.png" alt="Movie App Logo" class="logo">
   <div class="nav-left">
-    <a href="index.html" class="logo">MovieDatabase</a>
+    <a href="index.html" class="logo">ReelTalk</a>
   </div>
   <div class="nav-right">
     <a href="index.html" class="nav-link">Home</a>
@@ -18,7 +20,6 @@
 </nav>
 
   <h1>Movie List</h1>
-
   <div x-data="movieListComponent" x-init="init()">
     <!-- Search and Filter -->
     <div class="search-filter">
@@ -45,7 +46,6 @@
           <img :src="'https://image.tmdb.org/t/p/w200' + movie.poster_path" alt="" />
           <h3 x-text="movie.title"></h3>
           <p>Release: <span x-text="movie.release_date"></span></p>
-
           <div class="buttons">
             <a :href="'movie.html?movie_id=' + movie.id">
               <button class="view-btn">View Details</button>
