--- a/movie.html
+++ b/movie.html
@@ -8,6 +8,8 @@
 <body>
   <!-- Navigation Bar -->
 <nav class="navbar">
+    <div class="logo-container">
+      <img src="images/projector.png" alt="Movie App Logo" class="logo">
   <div class="nav-left">
     <a href="index.html" class="logo">MovieDatabase</a>
   </div>
@@ -18,7 +20,6 @@
 </nav>
 
   <h1>Movie Details</h1>
-
   <div x-data="movieComponent" x-init="init()">
     <template x-if="movie">
       <div class="movie-details">
