--- a/watchlist.html
+++ b/watchlist.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="./css/style.css" />
-  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+  <script defer src="./js/alpine.js"></script>
   <script src="./js/scripts.js"></script>
 </head>
 <body>
