--- a/watchlist.html
+++ b/watchlist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>This page has a title</title>
 <head>
   <link rel="stylesheet" href="./css/style.css" />
   <script defer src="./js/alpine.js"></script>
