--- a/movie.html
+++ b/movie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
-  <title>This page has a title</title>
+<html lang="en">
 <head>
+  <title>Movie Database</title>
   <link rel="stylesheet" href="./css/style.css" />
   <script defer src="./js/alpine.js"></script>
   <script src="./js/scripts.js"></script>
