--- a/movie.html
+++ b/movie.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Navigation Bar -->
 <nav class="navbar">
-    <div class="logo-container">
+  <div class="logo-container">
       <img src="images/projector.png" alt="Movie App Logo" class="logo">
   <div class="nav-left">
     <a href="index.html" class="logo">MovieDatabase</a>
@@ -33,15 +33,24 @@
         <p>Genres: <span x-text="movie.genres.map(g => g.name).join(', ')"></span></p>
         <p>Runtime: <span x-text="movie.runtime"></span> minutes</p>
         <p>Languages: <span x-text="movie.spoken_languages[0].english_name"></span></p>
-
+        
+        <!-- spotify 'button' for movie soundtrack -->
+    <template x-if="soundtrack">
+    <div class="soundtrack">
+      <h3>Soundtrack</h3>
+      <p><strong x-text="soundtrack.name"></strong> by <span x-text="soundtrack.artists[0].name"></span></p>
+      <iframe :src="'https://open.spotify.com/embed/track/' + soundtrack.id"width="300" height="100" 
+        frameborder="0" 
+        allowtransparency="true" 
+        allow="encrypted-media">
+      </iframe>
+    </div>
+  </template>
         <div class="buttons">
           <button class="watchlist-btn" @click="addToWatchlist(movie)">Add to Watchlist</button>
           <a href="index.html"><button class="view-btn">Back to List</button></a>
         </div>
-      </div>
-
-      
-    </template>
+  </div>
   </div>
 </body>
 </html>
