Added a load more button to load more movies.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         </div>
       </template>
     </div>
+<!-- Load More Button -->
+    <div class="load-more-container">
+      <button class="view-btn" @click="loadMore()">Load More</button>
+    </div>
   </div>
 </body>
 </html>
