--- a/movie.html
+++ b/movie.html
@@ -9,14 +9,17 @@
 <body>
   <!-- Navigation Bar -->
 <nav class="navbar">
-  <div class="logo-container">
-      <img src="images/projector.png" alt="Movie App Logo" class="logo">
   <div class="nav-left">
-    <a href="index.html" class="logo">MovieDatabase</a>
+    <div class="logo-container">
+      <img src="images/projector.png" alt="Movie App Logo" class="logo">
+      <a href="index.html" class="logo-text">ReelTalk</a>
+    </div>
   </div>
+
   <div class="nav-right">
     <a href="index.html" class="nav-link">Home</a>
     <a href="watchlist.html" class="nav-link">My Watchlist</a>
+    <button id="themeToggle" class="theme-toggle" aria-label="Toggle dark/light theme">Dark/Light theme</button>
   </div>
 </nav>
   <h1>Movie Details</h1>
